--- a/Project - 01 (DS in WEB)/HomePage/style.css
+++ b/Project - 01 (DS in WEB)/HomePage/style.css
@@ -8,23 +8,31 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(https://static.vecteezy.com/system/resources/previews/008/311/935/non_2x/the-illustration-graphic-consists-of-abstract-background-with-a-blue-gradient-dynamic-shapes-composition-eps10-perfect-for-presentation-background-website-landing-page-wallpaper-vector.jpg);
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background: rgb(34,193,195);
+    background: linear-gradient(-45deg, var(--bgcolorA) 0%, var(--bgcolorB) 100%);
 }
 
 .header{
     width: 100%;
-    height: 10%;
+    height: auto;
     font-size: 4vw;
     letter-spacing: 1vw;
     word-spacing: 2vw;
-    border: 1px solid black;
 }
 
 .main{
     width: 100%;
-    height: 90%;    
-    border: 1px solid black;    
+    height: auto;    
+    border: 1px solid black;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6em;
+    flex-wrap: wrap;
+}
+
+.main a{
+    width: 20%;
+    height: 20em;
+    border: 1px solid black;
 }
