added comment for border

--- a/Project - 01 (DS in WEB)/HomePage/style.css
+++ b/Project - 01 (DS in WEB)/HomePage/style.css
@@ -23,6 +23,7 @@ body{
     word-spacing: 2vw;
 }
 
+/* border is not specific type plz change the border */
 .main{
     width: 100%;
     height: 90%;    
