--- a/Project - 01 (DS in WEB)/LinkedList/style.css
+++ b/Project - 01 (DS in WEB)/LinkedList/style.css
@@ -2,7 +2,6 @@
     margin: 0px;
     padding: 0xx;   
     box-sizing: border-box;
-    /* text-align: center; */
 }
 
 body{
@@ -20,16 +19,12 @@ body{
     text-align: center;
 }
 
-#functionCode{
-    width: 1.2em;
-    height: 1.2em;
-    border: 1px solid;
-    border-radius: 50%;
-    font-size: 1em;
-}
-
 .text{
     font-size: 1.2em;
+}
+
+#showCode{
+    padding: 0em 1.5em;
 }
 
 .functionBar{
@@ -72,61 +67,6 @@ body{
 
 input{
     text-align: left;
-}
-
-#nodeStructure{
-    padding: 0.7em;
-}
-
-.language{
-    width: 100%;
-    height: 1.8em;
-    padding: 0em 1.2em;
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 0px;
-}
-
-#codeOfNode, #codeOfFunction{
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 19.5%;
-    left: 0.5%;
-    text-align: left;
-    visibility: hidden;
-    background-color: rgb(201, 123, 123);
-    border-radius: 1em;
-}
-
-#codeOfNode::before{    
-    content:'';
-    display:block;
-    width:10px;
-    height:10px;
-    transform: rotateZ(45deg);
-    position: relative;
-    top: -5px;
-    left: 15%;
-    background-color: rgb(201, 123, 123);
-}
-
-#codeOfFunction{
-    padding: 1em;
-    left: 13%;
-}
-
-#codeOfFunction::before{
-    content:'';
-    display:block;
-    width:10px;
-    height:10px;
-    transform: rotateZ(45deg);
-    position: relative;
-    top: -1.3em;
-    left: 15%;
-    background-color: rgb(201, 123, 123);
 }
 
 .statusbar{
@@ -198,8 +138,37 @@ input{
     border-right: 1px solid;
 }
 
-.space{
-    width: 15em;
-    height: 7.5em;
-    border:1px solid ;
+#close{
+    width: 1.5em;
+    height: 1.5em;
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    transform: translateX(-100%);
+    background-color: red;
+    color: white;
+    border: 0px;
+    text-align: center;
+}
+
+#background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    backdrop-filter: blur(3px);
+    display: flex;    
+    align-items: center;
+    justify-content: center; 
+    visibility: hidden;   
+}
+
+#code{
+    width: auto;
+    height: 70%;
+    background-color: whitesmoke;
+    /* padding: 2em; */
+    border: 1px solid;
+    overflow-y: scroll;
 }
