changes in stack

--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -1,44 +1,177 @@
-body {
+*{
+    margin: 0px;
+    padding: 0xx;   
+    box-sizing: border-box;
+}
+
+body{
+    width: 100vw;
     height: 100vh;
-    margin: 0;
-    background: rgb(34,193,195);
-    background: linear-gradient(-45deg, var(--bgcolorA) 0%, var(--bgcolorB) 100%);
-    overflow: hidden;
+    overflow: hidden;   
+}
+
+.header{
+    width: 100%;
+    height: 10%;
+    font-size: 4vw;
+    letter-spacing: 1vw;
+    word-spacing: 2vw;
+    text-align: center;
+}
+
+.text{
+    font-size: 1.2em;
+}
+
+#showCode{
+    padding: 0em 1.5em;
+}
+
+.functionBar{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.box{
+    width: auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid black;
+    padding: 0.7em;
+    gap: 1em;
+    text-align: center;
+}
+
+.innerbox{
+    border-radius: 1em;
+    width: auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+
+.innerbox select{
+    /* I have change in my code because it shows bigger in my code */
+    height: 10%;   
+}
+
+#parameter{
+    border: 0px;
+}
+
+input{
+    text-align: left;
+}
+
+.statusbar{
+    width: 100%;
+    height: auto;
+    padding: 0.6em;
+    border: 1px solid;
+    display: flex;  
+    text-align: center;
+}
+
+.button{
+    width: 30%;
+    height: 100%;
+    border-right: 1px solid;
+}
+
+.button button{
+    width: 80%;
+    height: 100%;
+}
+
+.status{
+    height: 100%;
+    width: 70%;
+    font-size: 120%;
 }
 
 .main{
+    width: 100%;
+    height: 75%;    
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.number_push{
-    font-size: 1.3em;
-}
-
-.input_text{
-    margin-top: 4em;
+#linkedlist{
+    width: 100%;    
+    height: 40%;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    overflow-x: auto;
     display: flex;
-    /* visibility: hidden; */
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap; 
+    gap: 2em; 
 }
 
-#input_text{
-    display: none;
+.node{
+    width: 10em;
+    height: 7.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid;
+    border-radius: 2em;  
 }
 
-.input_number{
-    font-size: 1.3em;
+.node div{
+    width: 5em;
+    height: 7.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.buttons{
-    margin-top: 2em;
+.node div:first-child{
+    border-right: 1px solid;
 }
 
-.button{
-    margin-right: 1.5em;
-    margin-left: 1.5em;
-    font-size: 2em;
+#close{
+    width: 1.5em;
+    height: 1.5em;
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    transform: translateX(-100%);
+    background-color: red;
+    color: white;
+    border: 0px;
+    text-align: center;
+}
+
+#background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    backdrop-filter: blur(3px);
+    display: flex;    
+    align-items: center;
+    justify-content: center; 
+    visibility: hidden;   
+}
+
+#code{
+    width: auto;
+    height: 70%;
+    background-color: whitesmoke;
+    /* padding: 2em; */
+    border: 1px solid;
+    overflow-y: scroll;
 }
 
 .container{
@@ -52,6 +185,10 @@ body {
 
 .box {
     position: relative;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: end;
+    align-items: center;
     width: 400px;
     height: 400px;
 }
