--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -103,7 +103,7 @@ input{
     justify-content: center;
     align-items: center;
 }
-
+/* 
 #linkedlist{
     width: 100%;    
     height: 40%;
@@ -115,8 +115,8 @@ input{
     justify-content: center;
     flex-wrap: nowrap; 
     gap: 2em; 
-}
-
+} */
+/* 
 .node{
     width: 10em;
     height: 7.5em;
@@ -137,7 +137,7 @@ input{
 
 .node div:first-child{
     border-right: 1px solid;
-}
+} */
 
 #close{
     width: 1.5em;
