--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -184,7 +184,7 @@ input{
 .number {
     width: 400px;
     height: 40px;
-    margin: 1px;
+    /* margin: 1px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -202,5 +202,20 @@ input{
     to {
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+.fade-out {
+    animation: fadeOut 0.5s ease-in-out;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0;
+        transform: scale(0.5);
     }
 }
