--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -219,3 +219,9 @@ input{
         transform: scale(0.5);
     }
 }
+
+.stackColor{
+    transition: background-color 2s ease-in-out;
+    background-color: red;
+}
+
