--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -147,6 +147,8 @@ input{
     align-items: center;
     width: 400px;
     height: 400px;
+    border: 1px solid black;
+    border-top: 0px;
 }
 
 .side {
@@ -154,7 +156,7 @@ input{
     border: 2px solid #000;
 }
 
-.left {
+/* .left {
     height: 400px;
     top: 0;
     left: 0;
@@ -179,7 +181,7 @@ input{
     border-left: 0;
     border-right: 0;
     border-bottom: 0;
-}
+} */
 
 .number {
     width: 400px;
