--- a/Project - 01 (DS in WEB)/LinkedList/style.css
+++ b/Project - 01 (DS in WEB)/LinkedList/style.css
@@ -95,6 +95,7 @@ input{
     height: 100%;
     width: 70%;
     font-size: 120%;
+    transition: all 0.3s;
 }
 
 .main{
@@ -102,9 +103,10 @@ input{
     height: 75%;    
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     overflow-y: auto;
-    padding: 5em;
+    position: relative;
+    padding: 5em 1em;
 }
 
 #linkedlist{
@@ -114,7 +116,6 @@ input{
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    /* overflow-y: scroll; */
     gap: 1em; 
 }
 
@@ -123,12 +124,11 @@ input{
     height: auto;
     display: flex;
     align-items: center;
-    gap: auto; 
-    gap: 2em;
+    justify-content: space-evenly;
 }
 
 .node{
-    min-width: 14%;
+    min-width: 5em;
     min-height: 5em;
     font-size: 1.4em;
     display: flex;
@@ -136,6 +136,7 @@ input{
     justify-content: center;
     border: 1px solid;
     border-radius: 2em;  
+    transition: all 0.25s;
 }
 
 .null{
@@ -210,7 +211,10 @@ input{
 }
 
 .current{
-    animation: current 0.25s linear;
+    /* animation: current 0.25s linear; */
+    transform: scale(1.2);
+    background-color: black;
+    color: white;
 }
 
 @keyframes current {
@@ -229,4 +233,8 @@ input{
         background-color: transparent;
         color: black;        
     }
+}
+
+.statusBlink{
+    transform: scale(1.2);
 }
