Linked List Final

--- a/Project - 01 (DS in WEB)/LinkedList/style.css
+++ b/Project - 01 (DS in WEB)/LinkedList/style.css
@@ -106,7 +106,7 @@ input{
     align-items: flex-start;
     overflow-y: auto;
     position: relative;
-    padding: 5em 1em;
+    padding: 10% 1em;
 }
 
 #linkedlist{
