--- a/Project - 01 (DS in WEB)/LinkedList/style.css
+++ b/Project - 01 (DS in WEB)/LinkedList/style.css
@@ -211,28 +211,10 @@ input{
 }
 
 .current{
-    /* animation: current 0.25s linear; */
-    transform: scale(1.2);
-    background-color: black;
+    transform: scale(1.3);
+    background-color: rgb(60, 60, 60);
     color: white;
-}
-
-@keyframes current {
-    0% {
-        transform: scale(1);
-        background-color: transparent;        
-        color: black;        
-    }
-    90% {
-        transform: scale(1.2);
-        background-color: black;
-        color: white;        
-    }
-    100%{
-        transform: scale(1);
-        background-color: transparent;
-        color: black;        
-    }
+    font-weight: 1.5em;
 }
 
 .statusBlink{
