--- a/Project - 01 (DS in WEB)/Queue/style.css
+++ b/Project - 01 (DS in WEB)/Queue/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px;
-    padding: 0px;   
+    padding: 0xx;   
     box-sizing: border-box;
 }
 
@@ -24,6 +24,7 @@ body{
 }
 
 #showCode{
+    height: 70%;
     padding: 0em 1.5em;
 }
 
@@ -58,8 +59,8 @@ body{
 }
 
 .innerbox select{
+    height: 70%;
     text-align: center;
-    height: 100%;   
 }
 
 #parameter{
@@ -85,8 +86,8 @@ input{
     border-right: 1px solid;
 }
 
-.button button{
-    width: 80%;
+.execution{
+    width: 70%;
     height: 100%;
 }
 
@@ -102,8 +103,30 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-y: auto; /* Enable vertical scrolling */
-    position: relative;
+}
+
+#queue{
+    width: 100%;    
+    height: 40%;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    overflow-x: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap; 
+    gap: 2em; 
+}
+
+.node{
+    min-width: 5em;
+    min-height: 5em;
+    font-size: 1.4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid;
+    border-radius: 2em;  
 }
 
 #close{
@@ -142,62 +165,19 @@ input{
     overflow-y: scroll;
 }
 
-/* .stack {
-    position: relative;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: end;
-    align-items: center;
-    width: 400px;
-    height: 400px;
-    border: 1px solid black;
-    border-top: 0px;
-} */
-
-.side {
-    position: absolute;
-    border: 2px solid #000;
+.fade-In {
+    animation: fadeIn 0.5s ease-in-out;
 }
 
-/* .left {
-    height: 400px;
-    top: 0;
-    left: 0;
-    border-left: 0;
-    border-top: 0;
-    border-bottom: 0;
-}
-
-.right {
-    height: 400px;
-    top: 0;
-    right: 0;
-    border-right: 0;
-    border-top: 0;
-    border-bottom: 0;
-}
-
-.bottom {
-    width: 400px;
-    bottom: 0;
-    left: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 0;
-} */
-
-.number {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    border: 2px solid #000;
-    font-size: 1.5em;
-    position: relative;
-    top: -100px; /* Start position outside the stack */
-    animation: moveToBottom 0.5s ease-in-out forwards; /* Smooth animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .fade-out {
@@ -215,60 +195,24 @@ input{
     }
 }
 
-
-.stackColor{
-    animation: stackPeek 1.5s ease-in-out ;
+.current{
+    animation: current 0.5s linear;
 }
 
-@keyframes stackPeek {
+@keyframes current {
     0% {
+        transform: scale(1);
+        background-color: transparent;        
+        color: black;        
+    }
+    90% {
+        transform: scale(1.2);
+        background-color: black;
+        color: white;        
+    }
+    100%{
+        transform: scale(1);
         background-color: transparent;
-    }
-    50% {
-        background-color: red;
-    }
-    100% {
-        background-color: transparent;
-    }
-}
-
-@keyframes moveToStack {
-    0% {
-        transform: translateY(-120%);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-.moving-in {
-    position: absolute;
-    top: -50px; /* Position the element above the .main class */
-    /* left: 50%; */
-    transform: translateX(-50%);
-    animation: moveToStack 0.5s ease-in-out forwards;
-}
-
-.stack {
-    position: relative;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-start;
-    align-items: center;
-    width: 400px;
-    min-height: 50%;/* Allow the height to grow */
-    border: 1px solid black;
-    border-top: 0px;
-    transition: height 0.3s ease;
-    overflow-y: auto;
-    /* margin-top: 20%; */
-}
-
-@keyframes moveToBottom {
-    0% {
-        top: -100px; /* Start outside the stack */
-    }
-    100% {
-        top: 0; /* Move to the bottom of the stack */
+        color: black;        
     }
 }
