--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -101,9 +101,10 @@ input{
     height: 75%;    
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     overflow-y: auto; /* Enable vertical scrolling */
     position: relative;
+    padding: 5em 0;
 }
 
 #close{
@@ -256,11 +257,12 @@ input{
     justify-content: flex-start;
     align-items: center;
     width: 400px;
-    min-height: 50%;/* Allow the height to grow */
+    height: max(50%);/* Allow the height to grow */
     border: 1px solid black;
     border-top: 0px;
     transition: height 0.3s ease;
     overflow-y: auto;
+    scrollbar-width: none;
     /* margin-top: 20%; */
 }
 
