--- a/Project - 01 (DS in WEB)/Queue/style.css
+++ b/Project - 01 (DS in WEB)/Queue/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0xx;   
     box-sizing: border-box;
+    color: white;
 }
 
 body{
@@ -17,6 +18,7 @@ body{
     letter-spacing: 1vw;
     word-spacing: 2vw;
     text-align: center;
+    border-bottom: 1px solid var(--borderColor);
 }
 
 .text{
@@ -24,16 +26,17 @@ body{
 }
 
 #showCode{
-    height: 70%;
+    height: 80%;
     padding: 0em 1.5em;
 }
 
 .functionBar{
+    padding: 0.3em 0em;
     width: 100%;
     height: 10%;
     display: flex;
     align-items: center;
-    border: 1px solid black;
+    border-bottom: 1px solid var(--borderColor);
 }
 
 .box{
@@ -42,8 +45,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-right: 1px solid black;
-    padding: 0.7em;
+    border-right: 1px solid var(--borderColor);
+    padding: 0.7em 1.3em;
     gap: 1em;
     text-align: center;
 }
@@ -59,6 +62,7 @@ body{
 }
 
 .innerbox select{
+    padding: 0em 1em;
     height: 70%;
     text-align: center;
 }
@@ -69,15 +73,18 @@ body{
 
 input{
     text-align: left;
+    height: 65%;
+    font-size: 1.1em;
 }
 
 .statusbar{
     width: 100%;
     height: auto;
     padding: 0.6em;
-    border: 1px solid;
+    border-bottom: 1px solid var(--borderColor);
     display: flex;  
     text-align: center;
+    justify-content: center;
 }
 
 .button{
@@ -87,14 +94,16 @@ input{
 }
 
 .execution{
-    width: 70%;
+    padding: 0.2em 0em;
+    width: 55%;
     height: 100%;
 }
 
 .status{
-    height: 100%;
     width: 70%;
+    height: auto;
     font-size: 120%;
+    transition: all 0.3s;
 }
 
 .main{
@@ -102,31 +111,45 @@ input{
     height: 75%;    
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    overflow-y: auto;
+    position: relative;
+    padding: 10% 1em;
 }
 
 #queue{
     width: 100%;    
-    height: 40%;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    overflow-x: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    gap: 1em; 
+}
+
+#queue .row{
+    width: 100%;
+    height: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap; 
-    gap: 2em; 
+    justify-content: space-evenly;
 }
 
 .node{
-    min-width: 5em;
-    min-height: 5em;
+    min-width: 4em;
+    min-height: 4em;
     font-size: 1.4em;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid;
     border-radius: 2em;  
+    transition: all 0.15s;
+}
+
+.null{
+    min-width: 8%;
+    border: 0px;
 }
 
 #close{
@@ -196,23 +219,38 @@ input{
 }
 
 .current{
-    animation: current 0.5s linear;
+    transform: scale(1.3);
+    background-color: rgb(60, 60, 60);
+    color: white;
+    font-weight: 1.5em;
 }
 
-@keyframes current {
-    0% {
-        transform: scale(1);
-        background-color: transparent;        
-        color: black;        
-    }
-    90% {
-        transform: scale(1.2);
-        background-color: black;
-        color: white;        
-    }
-    100%{
-        transform: scale(1);
-        background-color: transparent;
-        color: black;        
-    }
+i{
+    transition: all 0.15s;
+}
+
+.currentArrow{
+    transform: scale(1.8);
+}
+
+.statusBlink{
+    transform: scale(1.2);
+}
+
+
+
+body{
+    background-color: var(--bodyBackground);
+}
+.functionBar{
+    background-color: var(--functionBar);
+}
+.statusBar{
+    background-color: var(--statusBar);
+}
+button, input,  select {
+    background-color: var(--bodyBackground);
+    border: 0;
+    border-radius: 0.4em; 
+    box-shadow: 5px 4px 8px var(--boxShadow);
 }
