--- a/Project - 01 (DS in WEB)/Stack/style.css
+++ b/Project - 01 (DS in WEB)/Stack/style.css
@@ -10,13 +10,38 @@ body{
     overflow: hidden;   
 }
 
-.header{
+/* .header{
     width: 100%;
     height: 10%;
     font-size: 4vw;
     letter-spacing: 1vw;
     word-spacing: 2vw;
     text-align: center;
+} */
+
+.header{
+    width: 100vw;
+    height: 100vh;
+    margin: 0 0 0.1em 0;
+    /* color: #023047;
+    text-shadow: 3px 4px 4px #023047a0;
+    background-color: #2c7da0;
+    box-shadow: 0px 5px 10px #2c7da0, 0px 7px 12px #2c7da0, 0px 10px 18px #2c7da0; */
+
+    color: white;
+    text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.155);
+    background-color: var(--header-color);
+    /* box-shadow: 0px 5px 10px #2c7da0, 0px 7px 12px #2c7da0, 0px 10px 18px #2c7da0; */
+    
+    padding: 0.4em;
+    font-size: 5vmin;
+    letter-spacing: 1em;
+    word-spacing: 2em;
+    text-align: center;
+    /* position: fixed;
+    top: 0em; */
+    z-index: 3;
+    transition: all 0.5s;
 }
 
 .text{
