--- a/Project - 01 (DS in WEB)/Colors/Colors1.css
+++ b/Project - 01 (DS in WEB)/Colors/Colors1.css
@@ -6,7 +6,8 @@
     --button-color: #4a4b89;
     --slider-color: rgb(210, 210, 210);
     --red: #a00909;
-    --darkGreen: #4f9503;;
+    --darkGreen: #4f9503;
+    --orange: #8d5b00;
 }
 
 
